[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Receive SBUS frames from pro-tronik remote controller"
license = "BSD-2-Clauses"
name = "rfrx"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
pyserial = "^3.5"
python = "^3.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^7"
isort = "^5.11"
pre-commit = "^2"
ruff = "^0.0.270"

[tool.poetry.scripts]
protronik = "rfrx:ProTronikReader"
sbus = "rfrx:SbusReader"

[tool.ruff]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py37"

[tool.tomlsort]
all = true
